--- a/variableAndParsing.html
+++ b/variableAndParsing.html
@@ -22,9 +22,19 @@
 
         // console.log("foo:"+foo+" bar:"+bar+" baz:"+baz)
 
-        let [,,third] = ['foo','bar','baz']
+        // let [,,third] = ['foo','bar','baz']
 
-        console.log(third)
+        // console.log(third)
+        
+        // let [x,,y] = [1,2,3]
+
+        // console.log(x,y)
+
+        // let [head, ...tail] = [1,2,3,4]
+        // console.log(head,tail)
+
+        let [x,y,...z] = ['a']
+        console.log(x,y,z)
     </script>
 </body>
 </html>
